--- a/src/app/cadastro/cadastro.component.scss
+++ b/src/app/cadastro/cadastro.component.scss
@@ -1,7 +1,19 @@
 .list-group-item {
   font-size: 14px;
+  background-color: #d1e9e9;
 
-  i {
-    color: #00b5b8;
+  a {
+    i {
+      color: #00b5b8;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
   }
+
+}
+
+.modal-body-form {
+  background-color: #ffff;
 }
