--- a/src/app/listagem/listagem.component.scss
+++ b/src/app/listagem/listagem.component.scss
@@ -14,10 +14,6 @@
   }
 }
 
-
-
-
-
 .btn-cadastrar {
   background-color: #00b5b8;
   border-color: #00B5B8;
@@ -27,5 +23,21 @@
     border-color: #009C9F !important;
     background-color: #00CED2 !important;
     color: #FFF !important;
+  }
+}
+
+.botoes-acoes {
+  a {
+    &:hover {
+      .icone-primary {
+        color: #00CED2 !important;
+      }
+
+      .icone-danger {
+        color: #bb2d3b;
+      }
+
+      cursor: pointer;
+    }
   }
 }
