modal alert no login, fix msg

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -145,3 +145,12 @@
     </div>
   </div>
 </div>
+
+@if (modalConfirmacao()) {
+  <app-confirmacao-envio
+    [open]="modalConfirmacao()"
+    [mensagem]="mensagemModalConfirmacao"
+    [tipoModal]="tipoModalConfirmacao"
+    (fecharModal)="modalConfirmacao.set($event)">
+  </app-confirmacao-envio>
+}
